carousel fix z-index

--- a/portfolio-frontend/src/index.css
+++ b/portfolio-frontend/src/index.css
@@ -123,9 +123,6 @@ nav {
   align-items:center
 }
 
-#r1-6 {
-  z-index: -1
-}
 
 #nested-8 {
   height: 300px;
